force-apps/HOW/main/default/objects/Contact/fields/FamilyLastName__c.field-meta.xml
<CustomField>
    <fullName>FamilyLastName__c</fullName>
    <formula>Family__r.LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family&apos;s Last Name</label>
    <type>Text</type>
</CustomField>