force-apps/HOW/main/default/objects/Contact/fields/Number_of_Certifications_Held__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Certifications_Held__c</fullName>
    <description>Number of certifications held by the contact.</description>
    <label># of Certifications Held</label>
    <summaryForeignKey>Certification_Held__c.Certified_Professional__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>