force-apps/HOW/main/default/objects/Contact/recordTypes/Family.recordType-meta.xml
<RecordType>
    <fullName>Family</fullName>
    <active>true</active>
    <label>Family</label>
</RecordType>