force-apps/HOW/main/default/objects/Contact/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Use to create standard contacts.</description>
    <label>Standard</label>
</RecordType>