force-apps/HOW/main/default/objects/Contact/recordTypes/Technician.recordType-meta.xml
<RecordType>
    <fullName>Technician</fullName>
    <active>true</active>
    <description>Use to create technician contacts.</description>
    <label>Technician</label>
</RecordType>