force-apps/HOW/main/default/objects/Contact/listViews/Families.listView-meta.xml
<ListView>
    <fullName>Families</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>Family__c</columns>
    <columns>FamilyLastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Family</value>
    </filters>
    <label>Families</label>
</ListView>